[gd_scene load_steps=13 format=3 uid="uid://hhuo2kueuvl0"]

[ext_resource type="Texture2D" uid="uid://b186jtv4havf7" path="res://assets/sprites/background/CreditsBackground.png" id="1_ilkde"]
[ext_resource type="Texture2D" uid="uid://bmmn4vnop1xy7" path="res://assets/sprites/player/PlayerFinal.PNG" id="2_5nv6l"]
[ext_resource type="Script" uid="uid://bx2k41htl8enm" path="res://scripts/player_cheering.gd" id="3_5nv6l"]
[ext_resource type="Texture2D" uid="uid://fugffiwr71kg" path="res://assets/sprites/player/OpponentR23X.png" id="3_8svkk"]
[ext_resource type="AudioStream" uid="uid://bjdbobin83jp7" path="res://assets/audio/WinMusic.mp3" id="5_8svkk"]
[ext_resource type="Texture2D" uid="uid://phrtfyj5mrtj" path="res://assets/sprites/buttons/menu.png" id="6_t8oui"]
[ext_resource type="AudioStream" uid="uid://dayu4w8s1oped" path="res://assets/audio/click.mp3" id="7_kl32g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t8oui"]
atlas = ExtResource("2_5nv6l")
region = Rect2(0, 603, 256, 603)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl32g"]
atlas = ExtResource("2_5nv6l")
region = Rect2(256, 603, 256, 603)

[sub_resource type="SpriteFrames" id="SpriteFrames_sox6e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8oui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl32g")
}],
"loop": true,
"name": &"player_cheering",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oatfa"]
atlas = ExtResource("3_8svkk")
region = Rect2(1400, 0, 175, 312)

[sub_resource type="SpriteFrames" id="SpriteFrames_8hc5b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oatfa")
}],
"loop": false,
"name": &"failing",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_right = 1177.0
offset_bottom = 647.0
texture = ExtResource("1_ilkde")
expand_mode = 1

[node name="PlayerCheering" type="AnimatedSprite2D" parent="."]
position = Vector2(873, 406)
scale = Vector2(0.688477, 0.776327)
sprite_frames = SubResource("SpriteFrames_sox6e")
animation = &"player_cheering"
script = ExtResource("3_5nv6l")

[node name="OpponentFailing" type="AnimatedSprite2D" parent="."]
position = Vector2(313, 434)
scale = Vector2(1.12495, 1.10825)
sprite_frames = SubResource("SpriteFrames_8hc5b")
animation = &"failing"
frame_progress = 1.0

[node name="WinMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8svkk")
parameters/looping = true

[node name="MenuButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 547.0
offset_right = 748.0
offset_bottom = 647.0
texture_normal = ExtResource("6_t8oui")
stretch_mode = 3

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kl32g")

[connection signal="pressed" from="MenuButton" to="PlayerCheering" method="_on_menu_button_pressed"]
